@@ -1,3 +1,10 @@
+iTunes '09, segfault:
+	dmap_container_record_get_entry_count:86
+	_dmap_share_add_playlist_to_mlcl:1016
+
+Combine daap- and dpap-share.c filter parser (see filterstr). USE DPAP's
+BECUASE IT IS NEWER!
+
 Ensure client test catches newly shared files?
 
 Do transcode based on client?
