@@ -1,4 +1,5 @@
 EXTRA_DIST = 			\
 	test.jpeg		\
 	another-test.png	\
-	test.mp3
+	test.mp3		\
+	another-test.mp3
