@@ -1,3 +1,8 @@
+18 May 2010 W. Michael Petullo <mike@flyn.org>
+
+	* Add another case to dpap-share.c:build_filter() in an attempt
+	to support iTunes '09.
+
 16 May 2010 W. Michael Petullo <mike@flyn.org>
 
 	* Documentation work.
